Refactor SecurityConfig for CORS and authorization